# dspr-gameserver

./: CMakeLists.txt  FloatPoint.cpp  FloatPoint.h  Game.cpp  Game.h  GameServer.cpp  GameServer.h  Grid.cpp  Grid.h  IsoGrid.h  MapUtils.h  MathUtils.h  Message.cpp  Message.h  MessageReceiver.h  MessageSender.h  MoveGroup.cpp  MoveGroup.h  Player.cpp  Player.h  PlayerData.cpp  PlayerData.h  Point.cpp  Point.h  PrimIsoGrid.h  PtrIsoGrid.h  README.md  StringUtils.h  Synced.h  Tile.cpp  Tile.h  TileManager.cpp  TileManager.h  Unit.cpp  Unit.h  UnitManager.cpp  UnitManager.h  main.cpp
Game/: AnimationState.cpp  ChatManager.cpp  ChatManager.h  Circle.cpp  Circle.h  CircleCache.cpp  CircleCache.h  CircleCoord.cpp  CircleCoord.h  EconomyManager.cpp  EconomyManager.h  FogManager.cpp  FogManager.h  Game.cpp  Game.h  Int.cpp  Int.h  Item.cpp  Item.h  ItemManager.cpp  ItemManager.h  MoveGroup.h  OrderGroup.cpp  OrderGroup.h  Synced.h  Tile.h  TileManager.cpp  TileManager.h  Tribe.cpp  Tribe.h  TribeManager.cpp  TribeManager.h  Unit.cpp  Unit.h  UnitManager.cpp  UnitManager.h  VisionProfile.cpp  VisionProfile.h
Game/Circle/: Circle.cpp  Circle.h  CircleCache.cpp  CircleCache.h  CircleCoord.cpp  CircleCoord.h
Game/IsoBox/: IsoBox.cpp  IsoBox.h  IsoBoxCache.cpp  IsoBoxCache.h
Game/Item/: BodyPart.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemManager.cpp  ItemManager.h  ItemTemplate.cpp  ItemTemplate.h  ItemTemplateCatalog.cpp  ItemTemplateCatalog.h
Game/PlaneGeneration/: PlaneGenerator.cpp  PlaneGenerator.h
Game/Unit/: AnimationState.cpp  AnimationState.h  ConstructionQueue.cpp  ConstructionQueue.h  Inventory.cpp  Inventory.h  OrderGroup.cpp  OrderGroup.h  Projectile.cpp  Projectile.h  Synced.h  Unit.cpp  Unit.h  UnitManager.cpp  UnitManager.h  UnitOrder.cpp  UnitOrder.h  UnitTemplate.cpp  UnitTemplate.h  UnitTemplateCatalog.cpp  UnitTemplateCatalog.h
Game/Unit/SpecificUnit/: Manafount.cpp  Manafount.h  SpecificUnit.cpp  SpecificUnit.h  TempleBuilding.cpp  TempleBuilding.h  TempleFlying.cpp  TempleFlying.h
Math/: Bool.cpp  Bool.h  Int.cpp  Int.h  MathUtils.h  Point.cpp  Point.h
Pathfinding/: AStarPathfinder.cpp  AStarPathfinder.h  AttackEndPosFiller.cpp  AttackEndPosFiller.h  LinearPathfinder.cpp  LinearPathfinder.h  MoveEndPosFiller.cpp  MoveEndPosFiller.h  Path.cpp  Path.h  PathNode.cpp  PathNode.h  PathTile.cpp  PathTile.h  Pathfinder.cpp  Pathfinder.h  SimplePathfinder.cpp  SimplePathfinder.h
